[tool.poetry]
name = "cardioai"
version = "0.1.0"
description = "Framework for training deep learning models using Cardiac Magnetic Resonance data"
authors = ["Grzegorz Skorupko <grzegorz.skorupko@ub.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
monai = "^1.1.0"
torch = "^2.0.1"
scikit-learn = "^1.2.2"
torchmetrics = "^0.11.4"
pandas = "^2.0.1"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
